Refs #140518 - Fix page document padding on small screen. Also header.

--- a/src/SearchBlock/less/styles.less
+++ b/src/SearchBlock/less/styles.less
@@ -1257,8 +1257,8 @@ div#page-document {
 
 @media screen and (max-width: 600px) {
   .ui.basic.segment.content-area .ui.container#page-document {
+    padding: 0px 5px 0px 5px !important;
     margin-top: 0.5em !important;
-    padding: 0px !important;
   }
 
   div.col-left,
@@ -1284,8 +1284,7 @@ div#page-document {
 
   div.header-content {
     position: relative;
-    left: -30px;
-    width: calc(100% + 60px) !important;
+    left: 15px;
   }
 }
 
